# schemy

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml  publish.yml
schemaorg-rs/: Cargo.toml  README.md
schemaorg-rs/src/: about_page.rs  accept_action.rs  accommodation.rs  accounting_service.rs  achieve_action.rs  action.rs  action_access_specification.rs  action_status_type.rs  activate_action.rs  add_action.rs  administrative_area.rs  adult_entertainment.rs  adult_oriented_enumeration.rs  advertiser_content_article.rs  aggregate_offer.rs  aggregate_rating.rs  agree_action.rs  airline.rs  airport.rs  alignment_object.rs  all.rs  allocate_action.rs  am_radio_channel.rs  amp_story.rs  amusement_park.rs  analysis_news_article.rs  anatomical_structure.rs  anatomical_system.rs  animal_shelter.rs  answer.rs  apartment.rs  apartment_complex.rs  api_reference.rs  append_action.rs  apply_action.rs  approved_indication.rs  aquarium.rs  archive_component.rs  archive_organization.rs  arrive_action.rs  (+870 more)
schemaorg-ts/: README.md  biome.json  package.json  pnpm-lock.yaml
schemaorg-ts/src/: about_page.ts  accept_action.ts  accommodation.ts  accounting_service.ts  achieve_action.ts  action.ts  action_access_specification.ts  action_status_type.ts  activate_action.ts  add_action.ts  administrative_area.ts  adult_entertainment.ts  adult_oriented_enumeration.ts  advertiser_content_article.ts  aggregate_offer.ts  aggregate_rating.ts  agree_action.ts  airline.ts  (+892 more)
schemy/: Cargo.toml
schemy-ts/: Cargo.toml  README.md
schemy-ts/src/: main.rs
src/: main.rs
(+1 files in other folders)
