[package]
name = "schemy"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.3"
heck = "0.5.0"
indexmap = { version = "2.9.0", features = ["serde"] }
itertools = "0.14.0"
prettyplease = "0.2.32"
proc-macro2 = "1.0.95"
quote = "1.0.40"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
syn = "2.0.100"
