[package]
name = "schemaorg-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Generated Rust types from Schema.org JSON-LD vocabulary."
repository = "https://github.com/frectonz/schemy/tree/main/schemaorg-rs"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_with = "3.12.0"
uniffi = { version = "0.29.1", optional = true }

[features]
default = []
uniffi = ["dep:uniffi"]
