[package]
name = "schemy-ts"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Generates TypeScript types from Schema.org JSON-LD vocabulary."
repository = "https://github.com/frectonz/schemy"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
color-eyre = "0.6.3"
heck = "0.5.0"
indexmap = { version = "2.9.0", features = ["serde"] }
itertools = "0.14.0"
log = "0.4.27"
pretty_env_logger = "0.5.0"
prettyplease = "0.2.32"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
